Fix vertical align of 'Powered by' logo

--- a/src/styles/footer.scss
+++ b/src/styles/footer.scss
@@ -128,11 +128,8 @@ footer {
     @include font--muli;
 
     color: $color--grey;
-    font-size: 11px;
-    font-weight: 600;
-    line-height: 13px;
+    font-size: 0;
     text-align: center;
-    vertical-align: middle;
 
     @media screen and (max-width: 767px) {
       padding: 46px 0 43px;
@@ -149,8 +146,17 @@ footer {
 
     img {
       height: 13px;
+      margin-right: 8px;
       vertical-align: middle;
       width: 21px;
+    }
+
+    span {
+      display: inline-block;
+      font-size: 11px;
+      font-weight: 600;
+      line-height: 13px;
+      vertical-align: middle;
     }
 
     a {
@@ -159,7 +165,11 @@ footer {
     }
 
     .copyright-text {
+      font-size: 11px;
+      font-weight: 600;
+      line-height: 13px;
       margin-top: 17px;
+      vertical-align: middle;
 
       @media screen and (min-width: 1200px) {
         margin-top: 0;
